--- a/index.html
+++ b/index.html
@@ -50,10 +50,18 @@
   opacity: 1;
   right: 0;
 }
-</style>
 
-<div class="center-div" style="text-align: center">
-    <button class="button"><span>About</span></button>
-    <button class="button"><span>Resume</span></button>
-    <button class="button"><span>Portfolio</span></button>
+#grad {
+    width: 1000px;
+    height: 1000px;
+    background-color: red; /* For browsers that do not support gradients */
+    background-image: linear-gradient(to bottom right, #43ff32 , #32ffdd,  #3258ff); /* Standard syntax (must be last) */
+}
+</style>
+<div id="grad">
+    <div class="center-div" style="text-align: center">
+        <button class="button"><span>About</span></button>
+        <button class="button"><span>Resume</span></button>
+        <button class="button"><span>Portfolio</span></button>
+    </div>
 </div>
