fixed gradient colors

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 .button{
     width: 150px;
     margin: 5px;
-    background-color: #8097ff;
+    background-color: #49defc;
     border: none;
     color: white;
     padding: 7px 30px;
     text-align: center;
     font-size: 16px;
     border-radius: 5px;
-    border: 2px solid #8097ff;
+    /*border: 2px solid #00e6bf; */
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -64,7 +64,8 @@
     left: 0;
     right: 0;
     background-color: red; /* For browsers that do not support gradients */
-    background-image: linear-gradient(to bottom right, #43ff32 , #32ffdd,  #3258ff); /* Standard syntax (must be last) */
+    background-image: linear-gradient(to bottom right,#04a0c7,#93ddf5);
+    /*background-image: linear-gradient(to bottom right, #59c7eb, #32ffdd,  #3258ff); /* Standard syntax (must be last) */
 }
 
 
