Added opacity and flag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <style>
 
+body{
+    background-image: url("grasdenflag.png");
+}
+
 .out-div {
     width: 100%;
     height: 100%;
@@ -16,12 +20,13 @@
     left: 0;
     width: 300px;
     height: 150px;
+    opacity: 1;
 }
 
 .button{
     width: 150px;
     margin: 5px;
-    background-color: #49defc;
+    background-color: #03bde2;
     border: none;
     color: white;
     padding: 7px 30px;
@@ -63,6 +68,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    opacity: .7;
     background-color: red; /* For browsers that do not support gradients */
     background-image: linear-gradient(to bottom right,#04a0c7,#93ddf5);
     /*background-image: linear-gradient(to bottom right, #59c7eb, #32ffdd,  #3258ff); /* Standard syntax (must be last) */
