changed button color

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body{
 .button{
     width: 150px;
     margin: 5px;
-    background-color: #03bde2;
+    background-color: #012a32;
     border: none;
     color: white;
     padding: 7px 30px;
