--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body{
     width: 100%;
     height: 95%;
-    background-image: url("grasdenflag.png");
+    background-image: url("BackgroundFlag.png");
 }
 
 .out-div {
