--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,7 @@ body{
     width: 100%;
     height: 95%;
     background-image: url("BackgroundFlag.png");
+    font-family: 'Lato', sans-serif;
 }
 
 .out-div {
@@ -84,8 +85,8 @@ body{
         <div class="center-div" style="text-align: center">
         <!--Sets up buttons-->
             <a href="https://nichfalchfootch.github.io/About.html"><button class="button"><span>About</span></button></a>
-            <a href="https://nichfalchfootch.github.io/Resume.html"><button class="button"><span>Resume</span></button></a>
             <a href="https://nichfalchfootch.github.io/Portfolio.html"><button class="button"><span>Portfolio</span></button></a>
+            <a href="https://nichfalchfootch.github.io/Projects.html"><button class="button"><span>Projects</span></button></a>
         </div>
     </div>
 </body>
