--- a/About.html
+++ b/About.html
@@ -85,12 +85,12 @@
     }
     .main{
         background: grey;
-        margin: 100px 200px;
+        margin: 25% 50%;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
-        width: 500px;
+        width: 100%;
         height: 450px;
         opacity: 1;
     }
