--- a/About.html
+++ b/About.html
@@ -70,8 +70,10 @@
         </div>
     </div>
 
-<div class="top-Bar">
+<div class="top-Bar" style="font-size:25px">
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    <!--About Me-->
+    About Me
 </div>
 <!--Main Content-->
 <style>
@@ -84,8 +86,8 @@
         opacity: .5;
     }
     .main{
-        background: grey;
-        margin: 10% 50%;
+        color: black;
+        margin: 5% 30%;
         top: 0;
         right: 0;
         bottom: 0;
@@ -93,12 +95,24 @@
         width: 100%;
         opacity: 1;
     }
+    .border{
+        border-bottom-style: solid;
+    }
 </style>
 
 <div class="main">
-    hello
-</div>
+    <p class="border" style="font-size:20px">Hi, My Name Is Nicholas Falcon</p>
+    <p>I am a 17 year old senior attending Palm Desert High School.</p>
+    <br>
+    <p class="border" style="font-size:20px">My Hobbies Are</p>
+        <li>Filming</li>
+        <li>Cooking</li>
+        <li>Programming</li>
+        <li>Airsofting</li>
 
+
+
+</div>
 
 <!--Script-->
 <script>
