--- a/About.html
+++ b/About.html
@@ -101,14 +101,14 @@
 </style>
 
 <div class="main">
-    <p class="border" style="font-size:20px">Hi, My Name Is Nicholas Falcon</p>
-    <p>I am a 17 year old senior attending Palm Desert High School.</p>
+    <p class="border" style="font-size:30px">Hi, My Name Is Nicholas Falcon</p>
+    <p style="font-size: 20px">I am a 17 year old senior attending Palm Desert High School.</p>
     <br>
-    <p class="border" style="font-size:20px">My Hobbies Are</p>
-        <li>Filming</li>
-        <li>Cooking</li>
-        <li>Programming</li>
-        <li>Airsofting</li>
+    <p class="border" style="font-size:30px">My Hobbies Are</p>
+        <li style="font-size: 20px">Filming</li>
+        <li style="font-size: 20px">Cooking</li>
+        <li style="font-size: 20px">Programming</li>
+        <li style="font-size: 20px">Airsofting</li>
 
 
 
