--- a/About.html
+++ b/About.html
@@ -101,15 +101,14 @@
 </style>
 
 <div class="main">
-    <p class="border" style="font-size:30px">Hi, My Name Is Nicholas Falcon</p>
-    <p style="font-size: 20px">I am a 17 year old senior attending Palm Desert High School.</p>
-    <br>
-    <p class="border" style="font-size:30px">My Hobbies Are</p>
+    <p class="border" style="font-size:30px">Personal</p>
+    <p style="font-size: 20px">Hi, My Name Is Nicholas Falcon. I am a 17 year old senior attending Palm Desert High School. I am working towards graduating Palm Desert High School and looking to enlist in the United States Military. When i'm not working on school work, I am an Explorer with the Riverside County Sheriff's Department helping out the community. At home, I like to chill and play video games with my friends </p>
+    <p class="border" style="font-size:30px">Hobbies</p>
         <li style="font-size: 20px">Filming</li>
         <li style="font-size: 20px">Cooking</li>
         <li style="font-size: 20px">Programming</li>
         <li style="font-size: 20px">Airsofting</li>
-
+    <p class="border" style="font-size:30px">Skills</p>
 
 
 </div>
