--- a/About.html
+++ b/About.html
@@ -125,16 +125,16 @@
         <p class="border" style="font-size:30px">Skills</p>
         <!--Skills-->
         <div>
-            <div style="width: 85%; float: left;"><p class="skills">After Effects</p></div><div style=";float: right;"><p>85%</p></div>
-            <div style="width: 95%; float: left;"><p class="skills">Scuba Diving</p></div><div style=";float: right;"><p>95%</p></div>
-            <div style="width: 90%; float: left;"><p class="skills">Java Programming</p></div><div style=";float: right;"><p>90%</p></div>
-            <div style="width: 78%; float: left;"><p class="skills">C# Programming</p></div><div style=";float: right;"><p>78%</p></div>
-            <div style="width: 87%; float: left;"><p class="skills">C++ Programming</p></div><div style=";float: right;"><p>87%</p></div>
-            <div style="width: 64%; float: left;"><p class="skills">HTML Programming</p></div><div style=";float: right;"><p>64%</p></div>
-            <div style="width: 58%; float: left;"><p class="skills">CSS Programming</p></div><div style=";float: right;"><p>58%</p></div>
-            <div style="width: 52%; float: left;"><p class="skills">Javascript Programming</p></div><div style=";float: right;"><p>52%</p></div>
-            <div style="width: 78%; float: left;"><p class="skills" >Swift Programming</p></div><div style=";float: right;"><p>78%</p></div>
-            <div style="width: 86%; float: left;"><p class="skills" >Andriod Studio Programming</p></div><div style=";float: right;"><p>86%</p></div>
+            <div style="width: 85%; float: left;"><p class="skills">After Effects</p></div><div style=";float: left;"><p>85%</p></div>
+            <div style="width: 95%; float: left;"><p class="skills">Scuba Diving</p></div><div style=";float: left;"><p>95%</p></div>
+            <div style="width: 90%; float: left;"><p class="skills">Java Programming</p></div><div style=";float: left;"><p>90%</p></div>
+            <div style="width: 78%; float: left;"><p class="skills">C# Programming</p></div><div style=";float: left;"><p>78%</p></div>
+            <div style="width: 87%; float: left;"><p class="skills">C++ Programming</p></div><div style=";float: left;"><p>87%</p></div>
+            <div style="width: 64%; float: left;"><p class="skills">HTML Programming</p></div><div style=";float: left;"><p>64%</p></div>
+            <div style="width: 58%; float: left;"><p class="skills">CSS Programming</p></div><div style=";float: left;"><p>58%</p></div>
+            <div style="width: 52%; float: left;"><p class="skills">Javascript Programming</p></div><div style=";float: left;"><p>52%</p></div>
+            <div style="width: 78%; float: left;"><p class="skills" >Swift Programming</p></div><div style=";float: left;"><p>78%</p></div>
+            <div style="width: 86%; float: left;"><p class="skills" >Andriod Studio Programming</p></div><div style=";float: left;"><p>86%</p></div>
         </div>
     </div>
 
