--- a/About.html
+++ b/About.html
@@ -5,6 +5,10 @@
     <style>
         body {
             font-family: 'Lato', sans-serif;
+            background: 
+            background-image: url("aboutBackground.jpg");
+            background-repeat: no-repeat;
+
         }
 
         .overlay {
@@ -58,91 +62,92 @@
         }
 
     </style>
+    <style>
+        .top-Bar{
+            background: grey;
+            margin: 0px 0px;
+            top: 0;
+            width: 100%;
+            height: 35px;
+            opacity: .5;
+        }
+        .main{
+            color: black;
+            margin: 5% 30%;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 60%;
+            opacity: 1;
+        }
+        .border{
+            border-bottom-style: solid;
+        }
+        .test{
+            background: grey;
+        }
+
+        .skills{
+            background: rgba(77, 77, 77, 0.5);
+            border-radius: 5px;
+        }
+
+    </style>
 </head>
 <body>
-    <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="overlay-content">
-            <a href="https://nichfalchfootch.github.io/Home.html">Home</a>
-            <a href="https://nichfalchfootch.github.io/Portfolio.html">Portfolio</a>
-            <a href="https://nichfalchfootch.github.io/Projects.html">Projects</a>
-            <a href="https://nichfalchfootch.github.io/Resume.html">Resume</a>
-        </div>
-    </div>
-
-<div class="top-Bar" style="font-size:25px">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-    <!--About Me-->
-    About Me
-</div>
-<!--Main Content-->
-<style>
-    .top-Bar{
-        background: grey;
-        margin: 0px 0px;
-        top: 0;
-        width: 100%;
-        height: 35px;
-        opacity: .5;
-    }
-    .main{
-        color: black;
-        margin: 5% 30%;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        width: 60%;
-        opacity: 1;
-    }
-    .border{
-        border-bottom-style: solid;
-    }
-    .test{
-        background: grey;
-    }
-
-    .skills{
-        background: grey;
-        border-radius: 5px;
-    }
-
-</style>
-
-
-<div class="main">
-    <p class="border" style="font-size:30px">Personal</p>
-    <p style="font-size: 20px">Hi, My Name Is Nicholas Falcon. I am a 17 year old senior attending Palm Desert High School. I am working towards graduating Palm Desert High School and looking to enlist in the United States Military. When i'm not working on school work, I am an Explorer with the Riverside County Sheriff's Department helping out the community. At home, I like to chill and play video games with my friends </p>
-    <p class="border" style="font-size:30px">Hobbies</p>
-        <li style="font-size: 20px">Filming</li>
-        <li style="font-size: 20px">Cooking</li>
-        <li style="font-size: 20px">Programming</li>
-        <li style="font-size: 20px">Airsofting</li>
-        <li style="font-size: 20px">Biking</li>
-
-
     <div>
-        <p class="border" style="font-size:30px">Skills</p>
-        <!--Skills-->
-        <div>
-            <div style="width: 85%; float: left;"><p class="skills">After Effects</p></div><div style=";float: left;"><p>85%</p></div>
-            <div style="width: 95%; float: left;"><p class="skills">Scuba Diving</p></div><div style=";float: left;"><p>95%</p></div>
-            <div style="width: 90%; float: left;"><p class="skills">Java Programming</p></div><div style=";float: left;"><p>90%</p></div>
-            <div style="width: 78%; float: left;"><p class="skills">C# Programming</p></div><div style=";float: left;"><p>78%</p></div>
-            <div style="width: 87%; float: left;"><p class="skills">C++ Programming</p></div><div style=";float: left;"><p>87%</p></div>
-            <div style="width: 64%; float: left;"><p class="skills">HTML Programming</p></div><div style=";float: left;"><p>64%</p></div>
-            <div style="width: 58%; float: left;"><p class="skills">CSS Programming</p></div><div style=";float: left;"><p>58%</p></div>
-            <div style="width: 52%; float: left;"><p class="skills">Javascript Programming</p></div><div style=";float: left;"><p>52%</p></div>
-            <div style="width: 78%; float: left;"><p class="skills" >Swift Programming</p></div><div style=";float: left;"><p>78%</p></div>
-            <div style="width: 86%; float: left;"><p class="skills" >Andriod Studio Programming</p></div><div style=";float: left;"><p>86%</p></div>
-        </div>
+
     </div>
 
+        <div id="myNav" class="overlay">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <div class="overlay-content">
+                <a href="https://nichfalchfootch.github.io/Home.html">Home</a>
+                <a href="https://nichfalchfootch.github.io/Portfolio.html">Portfolio</a>
+                <a href="https://nichfalchfootch.github.io/Projects.html">Projects</a>
+                <a href="https://nichfalchfootch.github.io/Resume.html">Resume</a>
+            </div>
+        </div>
+
+    <div class="top-Bar" style="font-size:25px">
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+        <!--About Me-->
+        About Me
+    </div>
+<!--Main Content-->
+    <div class="main">
+        <p class="border" style="font-size:30px">Personal</p>
+        <p style="font-size: 20px">Hi, My Name Is Nicholas Falcon. I am a 17 year old senior attending Palm Desert High School. I am working towards graduating Palm Desert High School and looking to enlist in the United States Military. When i'm not working on school work, I am an Explorer with the Riverside County Sheriff's Department helping out the community. At home, I like to chill and play video games with my friends </p>
+        <p class="border" style="font-size:30px">Hobbies</p>
+            <li style="font-size: 20px">Filming</li>
+            <li style="font-size: 20px">Cooking</li>
+            <li style="font-size: 20px">Programming</li>
+            <li style="font-size: 20px">Airsofting</li>
+            <li style="font-size: 20px">Biking</li>
+
+
+        <div>
+            <p class="border" style="font-size:30px">Skills</p>
+            <!--Skills-->
+            <div>
+                <div style="width: 85%; float: left;"><p class="skills">After Effects</p></div><div style=";float: left;"><p>85%</p></div>
+                <div style="width: 95%; float: left;"><p class="skills">Scuba Diving</p></div><div style=";float: left;"><p>95%</p></div>
+                <div style="width: 90%; float: left;"><p class="skills">Java Programming</p></div><div style=";float: left;"><p>90%</p></div>
+                <div style="width: 78%; float: left;"><p class="skills">C# Programming</p></div><div style=";float: left;"><p>78%</p></div>
+                <div style="width: 87%; float: left;"><p class="skills">C++ Programming</p></div><div style=";float: left;"><p>87%</p></div>
+                <div style="width: 64%; float: left;"><p class="skills">HTML Programming</p></div><div style=";float: left;"><p>64%</p></div>
+                <div style="width: 58%; float: left;"><p class="skills">CSS Programming</p></div><div style=";float: left;"><p>58%</p></div>
+                <div style="width: 52%; float: left;"><p class="skills">Javascript Programming</p></div><div style=";float: left;"><p>52%</p></div>
+                <div style="width: 78%; float: left;"><p class="skills" >Swift Programming</p></div><div style=";float: left;"><p>78%</p></div>
+                <div style="width: 86%; float: left;"><p class="skills" >Andriod Studio Programming</p></div><div style=";float: left;"><p>86%</p></div>
+            </div>
+        </div>
 
 
 
-</div>
 
+    </div>
 <!--Script-->
 <script>
 function openNav() {
