--- a/About.html
+++ b/About.html
@@ -3,6 +3,7 @@
 <style>
     .body{
         background-image: linear-gradient(to bottom right,#04a0c7,#93ddf5);
+        background-size:100% auto;
     }
     .main{
         margin: 0 0;
@@ -48,7 +49,7 @@
             <div>
                 <p class="border">Skills</p>
                 <ul>
-                    
+
                 </ul>
             </div>
         </div>
