--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,7 @@ body{
     width: 100%;
     height: 95%;
     background-image: url("BackgroundFlag.png");
+    background-size:100% auto;
     font-family: 'Lato', sans-serif;
 }
 
