--- a/About.html
+++ b/About.html
@@ -18,6 +18,9 @@
         border-bottom-style: solid;
         font-size: 30px;
     }
+    .info2{
+        font-size: 20px;
+    }
     #grad {
     position: absolute;
     top: 0;
@@ -37,13 +40,17 @@
             <div>
                 <p class="border">Personal</p>
                 <ul>
-                    <li></li>
+                    <li class="info2">Hi, My Name Is Nicholas Falcon. I am a 17 year old senior attending Palm Desert High School. I am working towards graduating Palm Desert High School and looking to enlist in the United States Military. When i'm not working on school work, I am an Explorer with the Riverside County Sheriff's Department helping out the community. At home, I like to chill and play video games with my friends</li>
                 </ul>
             </div>
             <div>
                 <p class="border">Hobbies</p>
                 <ul>
-                    <li></li>
+                    <li class="info2">Filming</li>
+                    <li class="info2">Cooking</li>
+                    <li class="info2">Programming</li>
+                    <li class="info2">Airsofting</li>
+                    <li class="info2">Biking</li>
                 </ul>
             </div>
             <div>
