--- a/About.html
+++ b/About.html
@@ -2,6 +2,10 @@
 
 <style>
     .body{
+        position: absolute;
+        margin: 0 0;
+        width: 100%;
+        height: 100%;
         background-image: linear-gradient(to bottom right,#04a0c7,#93ddf5);
         background-size:100% auto;
     }
@@ -22,14 +26,15 @@
         font-size: 20px;
     }
     #grad {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: .7;
-    background-color: red; /* For browsers that do not support gradients */
-    background-image: url("aboutBackground.jpg")
+        position: absolute;
+        margin: 0 0;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        opacity: .7;
+        background-color: red; /* For browsers that do not support gradients */
+        background-image: url("aboutBackground.jpg")
 }
 
 </style>
