--- a/About.html
+++ b/About.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 
 <style>
-    .body{
-        position: absolute;
+    body{
         margin: 0 0;
         width: 100%;
         height: 100%;
-        background-image: linear-gradient(to bottom right,#04a0c7,#93ddf5);
-        background-size:100% auto;
+        background-image: url("aboutBackground.jpg")
     }
     .main{
         margin: 0 0;
@@ -32,20 +30,20 @@
         bottom: 0;
         left: 0;
         right: 0;
-        opacity: .7;
-        background-color: red; /* For browsers that do not support gradients */
-        background-image: url("aboutBackground.jpg")
+        background-image: linear-gradient(to bottom right,#04a0c7,#93ddf5);
+        opacity: .7; /* For browsers that do not support gradients */
+
 }
 
 </style>
 
-<body class="body">
+<body>
     <div class="main" id="grad">
         <div class="info">
             <div>
                 <p class="border">Personal</p>
                 <ul>
-                    <li class="info2">Hi, My Name Is Nicholas Falcon. I am a 17 year old senior attending Palm Desert High School. I am working towards graduating Palm Desert High School and looking to enlist in the United States Military. When I'm not working on school work, I am an Explorer with the Riverside County Sheriff's Department helping out the community. At home, I like to chill and play video games with my friends</li>
+                    <li class="info2">Hi, My Name Is Nicholas Falcon. I am a 17 year old senior attending Palm Desert High School. I am working towards graduating Palm Desert High School and looking to enlist in the United States Military. When I'm not working on school work, I am an Explorer with the Riverside County Sheriff's Department helping out the community. At home, I like to chill and play video games with my friends </li>
                 </ul>
             </div>
             <div>
@@ -61,7 +59,6 @@
             <div>
                 <p class="border">Skills</p>
                 <ul>
-
                 </ul>
             </div>
         </div>
