--- a/About.html
+++ b/About.html
@@ -30,7 +30,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        background-image: linear-gradient(to bottom right,#04a0c7,#93ddf5);
+        background-image: linear-gradient(to bottom right,);
         opacity: .7; /* For browsers that do not support gradients */
 
 }
