--- a/Home.html
+++ b/Home.html
@@ -8,6 +8,7 @@ body{
     height: 95%;
     background-image: url("BackgroundFlag.png");
     background-size:100% auto;
+    background-repeat: no-repeat;
     font-family: 'Lato', sans-serif;
 }
 
@@ -75,7 +76,7 @@ body{
     right: 0;
     opacity: .7;
     background-color: red; /* For browsers that do not support gradients */
-    background-image: linear-gradient(to bottom right,#04a0c7,#93ddf5);
+    background-image: linear-gradient(to bottom right,#4cff31,#31ffc8,#3168ff);
 }
 
 </style>
