--- a/Home.html
+++ b/Home.html
@@ -76,7 +76,7 @@ body{
     right: 0;
     opacity: .7;
     background-color: red; /* For browsers that do not support gradients */
-    background-image: linear-gradient(to bottom right,#4cff31,#31ffc8,#3168ff);
+    background-image: linear-gradient(to bottom right,#b2d7ff,#b2ffda,#c5ffb2);
 }
 
 </style>
