--- a/About.html
+++ b/About.html
@@ -30,7 +30,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        background-image: linear-gradient(to bottom right,);
+        background-image: linear-gradient(to bottom,#467BA0, #75A4C7, #AFD3ED, #EDC9AF, #C79775);
         opacity: .7; /* For browsers that do not support gradients */
 
 }
