--- a/Home.html
+++ b/Home.html
@@ -75,8 +75,8 @@ body{
     left: 0;
     right: 0;
     opacity: .7;
-    background-color: red; /* For browsers that do not support gradients */
-    background-image: linear-gradient(to bottom right,#b2d7ff,#b2ffda,#c5ffb2);
+    background-color: yellow; /* For browsers that do not support gradients */
+    background-image: linear-gradient( #fffc4f,#a6e5e8);
 }
 
 </style>
