--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@
             <div>
                 <p class="border">Personal</p>
                 <ul>
-                    <p class="info2">Hi, My Name Is Nicholas Falcon. I am a 17 year old senior attending Palm Desert High School. I am working towards graduating Palm Desert High School and looking to enlist in the United States Military. When I'm not working on school work, I am an Explorer with the Riverside County Sheriff's Department helping out the community. At home, I like to chill and play video games with my friends </p>
+                    <p class="info2" style="width: 80%">Hi, My Name Is Nicholas Falcon. I am a 17 year old senior attending Palm Desert High School. I am working towards graduating Palm Desert High School and looking to enlist in the United States Military. When I'm not working on school work, I am an Explorer with the Riverside County Sheriff's Department helping out the community. At home, I like to chill and play video games with my friends </p>
                 </ul>
             </div>
             <div>
