--- a/About.html
+++ b/About.html
@@ -31,6 +31,8 @@
         bottom: 0;
         left: 0;
         right: 0;
+        width: 100%;
+        height: 100%;
         background-image: linear-gradient( #467BA0, #75A4C7, #AFD3ED, #EDC9AF, #C79775);
         opacity: .7; /* For browsers that do not support gradients */
 
