--- a/About.html
+++ b/About.html
@@ -4,8 +4,10 @@
     body{
         margin: 0 0;
         width: 100%;
-        height: 100%;
-        background-image: url("aboutBackground.jpg")
+        height: 95%;
+        background-image: url("aboutBackground.jpg");
+        background-size: 100% auto;
+        background-repeat: no-repeat;
     }
     .main{
         margin: 0 0;
