--- a/About.html
+++ b/About.html
@@ -35,7 +35,7 @@
         right: 0;
         width: 100%;
         height: 100%;
-        background-image: linear-gradient( #467BA0, #75A4C7, #AFD3ED, #EDC9AF, #C79775);
+        background-image: linear-gradient( #467BA0, #75A4C7, #AFD3ED, #EDC9AF, #C79775, #A06C46);
         opacity: .7; /* For browsers that do not support gradients */
 
 }
