--- a/About.html
+++ b/About.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 
 <style>
+    html body {
+        min-height: 100%;
+    }
     body{
         margin: 0 0;
         width: 100%;
-        height: 95%;
+        height: 100%;
         background-image: url("aboutBackground.jpg");
         background-size: 100% auto;
         background-repeat: no-repeat;
@@ -29,16 +32,12 @@
     #grad {
         position: absolute;
         margin: 0 0;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
         width: 100%;
         height: 100%;
+        background: #467BA0;
         background-image: linear-gradient( #467BA0, #75A4C7, #AFD3ED, #EDC9AF, #C79775, #A06C46);
         opacity: .7; /* For browsers that do not support gradients */
-
-}
+    }
 
 </style>
 
@@ -63,8 +62,22 @@
             </div>
             <div>
                 <p class="border">Skills</p>
-                <ul>
-                </ul>
+                <div>
+                    <ul>
+                        <p>After Effects</p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
