--- a/About.html
+++ b/About.html
@@ -29,6 +29,11 @@
     .info2{
         font-size: 20px;
     }
+    .info3{
+        font-size: 16px;
+        background: grey;
+        border-radius: 5px;
+    }
     #grad {
         position: absolute;
         margin: 0 0;
@@ -62,20 +67,20 @@
             </div>
             <div>
                 <p class="border">Skills</p>
-                <div>
+                <div style="width: 50%; float: left;">
                     <ul>
-                        <p>After Effects</p>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <p class="info3" style="width: 87%">After Effects</p><p style="font-size: 16px">87%</p>
+                        <p class="info3" style="width: 78%">CSS</p><p style="font-size: 16px">78%</p>
+                        <p class="info3" style="width: 89%">Swift</p><p style="font-size: 16px">89%</p>
+                        <p class="info3" style="width: 68%">JavaScript</p><p style="font-size: 16px">68%</p>
                     </ul>
                 </div>
-                <div>
+                <div style="width: 50%; float: right;">
                     <ul>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <p class="info3" style="width: 90%">Java</p><p style="font-size: 16px">90%</p>
+                        <p class="info3" style="width: 86%">HTML</p><p style="font-size: 16px">86%</p>
+                        <p class="info3" style="width: 83%">Andriod Studio</p><p style="font-size: 16px">83%</p>
+                        <p class="info3" style="width: 65%">XCode</p><p style="font-size: 16px">65%</p>
                     </ul>
                 </div>
             </div>
