--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <style>
-    html body {
+    html {
         min-height: 100%;
     }
     body{
@@ -38,7 +38,7 @@
         position: absolute;
         margin: 0 0;
         width: 100%;
-        height: 100%;
+        height: 210%;
         background: #467BA0;
         background-image: linear-gradient( #467BA0, #75A4C7, #AFD3ED, #EDC9AF, #C79775, #A06C46);
         opacity: .7; /* For browsers that do not support gradients */
