--- a/Home.html
+++ b/Home.html
@@ -76,7 +76,7 @@ body{
     right: 0;
     opacity: .7;
     background-color: yellow; /* For browsers that do not support gradients */
-    background-image: linear-gradient( #fffc4f,#a6e5e8);
+    background-image: linear-gradient( to bottom right,#ff8585,#dbdbdb, #858dff);
 }
 
 </style>
