--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,7 @@
             margin: 50% 10%;
             width: 10%;
             height: 10%;
+            color: white;
         }
         #grad{
             margin: 0 0;
@@ -18,7 +19,7 @@
 </head>
 
 <body id="grad">
-    <div class="menu" id="grad">
-        <span style="font-size:40px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    <div id="grad">
+        <span class="menu">&#9776;</span>
     </div>
 </body>
