--- a/Home.html
+++ b/Home.html
@@ -1,25 +1,54 @@
 <!DOCTYPE html>
-<!--Home Page-->
+
 <head>
+
     <style>
-        .menu{
-            margin: 50% 10%;
-            width: 10%;
-            height: 10%;
-            color: white;
-        }
-        #grad{
-            margin: 0 0;
-            position: absolute;
-            background-image: radial-gradient(#383838,#090909);
+        body {
+            background: #000000;
+            background-image: url("82749.jpg");
             width: 100%;
             height: 100%;
+            background-repeat: no-repeat;
+        }
+        .main-text{
+            margin: 50% 0%;
+            position: absolute;
         }
     </style>
-</head>
 
-<body id="grad">
-    <div id="grad">
-        <span class="menu">&#9776;</span>
+</head>
+<body>
+    <div>
+        <div class="main-text">
+            <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
+        </div>
     </div>
 </body>
+
+<style>
+    @import url(https://fonts.googleapis.com/css?family=Khula:700);
+    .hidden {
+        opacity:0;
+    }
+    .console-container {
+        font-family:Khula;
+        font-size:4em;
+        text-align:center;
+        height:200px;
+        width:600px;
+        display:block;
+        position:absolute;
+        color:white;
+        top:0;
+        bottom:0;
+        left:0;
+        right:0;
+        margin:auto;
+    }
+    .console-underscore {
+        display:inline-block;
+        position:relative;
+        top:-0.14em;
+        left:10px;
+    }
+</style>
