--- a/Home.html
+++ b/Home.html
@@ -11,6 +11,9 @@
             background-repeat: no-repeat;
         }
         .main-text{
+            margin: 40% 60%;
+        }
+        .second-text{
             margin: 40% 0%;
             position: absolute;
         }
@@ -19,8 +22,11 @@
 </head>
 <body>
     <div>
-        <div class="main-text">
+        <div class="second-text">
             <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
+        </div>
+        <div class="main-text">
+            hello fjkdslajkldsajflk
         </div>
     </div>
 </body>
@@ -55,7 +61,7 @@
 
 <script>
 // function([string1, string2],target id,[color1,color2])
- consoleText(['Hello World.', 'Console Text', 'Made with Love.'], 'text',['tomato','rebeccapurple','lightblue']);
+ consoleText(['Nicholas Falcon', 'Console Text', 'Made with Love.'], 'text',['AliceBlue','rebeccapurple','lightblue']);
 
 function consoleText(words, id, colors) {
   if (colors === undefined) colors = ['#fff'];
