--- a/Home.html
+++ b/Home.html
@@ -22,10 +22,10 @@
 </head>
 <body>
     <div>
-        <div class="second-text">
+        <div class="second-text" style=" float: left;">
             <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
         </div>
-        <div class="main-text">
+        <div class="main-text" style=" float: right;">
             hello fjkdslajkldsajflk
         </div>
     </div>
