--- a/Home.html
+++ b/Home.html
@@ -11,13 +11,10 @@
             background-repeat: no-repeat;
         }
         .main-text{
-            width: 30%;
+            top: 40%;
+            width: 25%;
             float: right;
             text-align: center;
-        }
-        .second-text{
-            width: 70%;
-            float: left;
         }
     </style>
 
@@ -28,7 +25,11 @@
             <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
         </div>
         <div class="main-text" style=" float: right;">
-            <button></button>
+            <ul>
+                <button>Home</button>
+                <button>About</button>
+                <button></button>
+            </ul>
         </div>
     </div>
 </body>
@@ -43,14 +44,13 @@
         float: left;
         font-family:Khula;
         font-size:4em;
-        text-align:center;
         height:200px;
         display:block;
         position:absolute;
         color:white;
-        top:0;
+        top:60%;
         bottom:0;
-        left:0;
+        left:10%;
         right:0;
     }
     .console-underscore {
