--- a/Home.html
+++ b/Home.html
@@ -11,10 +11,13 @@
             background-repeat: no-repeat;
         }
         .main-text{
-            top: 40%;
-            width: 25%;
-            float: right;
+            width: 30%;
+            float: left;
             text-align: center;
+        }
+        .buttons{
+            margin: 50% 0%;
+            background: green;
         }
     </style>
 
@@ -25,11 +28,7 @@
             <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
         </div>
         <div class="main-text" style=" float: right;">
-            <ul>
-                <button>Home</button>
-                <button>About</button>
-                <button></button>
-            </ul>
+            <button class="buttons"></button>
         </div>
     </div>
 </body>
