--- a/Home.html
+++ b/Home.html
@@ -6,13 +6,13 @@
         body {
             background: #000000;
             background-image: url("82749.jpg");
-            width: 100%;
-            height: 80%;
+            width: 95%;
+            height: 85%;
             background-repeat: no-repeat;
         }
         .main-text{
             width: 30%;
-            float: left;
+            float: right;
             text-align: center;
         }
         .buttons{
@@ -27,7 +27,7 @@
         <div>
             <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
         </div>
-        <div class="main-text" style=" float: right;">
+        <div class="main-text">
             <button class="buttons"></button>
         </div>
     </div>
@@ -39,7 +39,6 @@
         opacity:0;
     }
     .console-container {
-        width: 70%;
         float: left;
         font-family:Khula;
         font-size:4em;
